--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
 
     <!-- Common -->
     <string name="confirm">확인</string>
+    <string name="complete">완료</string>
+    <string name="no">아니요</string>
+    <string name="clsoe">닫기</string>
 
     <!-- SNS Login KEY -->
     <string name="kakao_native_key">1888a889e7ea1a4e154040e65c5032ae</string>
@@ -39,5 +42,41 @@
     <string name="password_confirm_hint">비밀번호를 한번 더 입력해주세요.</string>
     <string name="password_error">영문 대/소문자, 숫자, 특수문자를 조합한 8~16자의\n비밀번호를 입력해주세요. (연속하는 문자, 숫자 금지)</string>
     <string name="password_confirm_error">비밀번호를 다시 확인해주세요.</string>
-    <string name="complete">완료</string>
+
+    <!-- 모먼트 만들기 -->
+    <string name="moment_create_toolbar">모먼트 만들기</string>
+    <string name="moment_create_select_image">커버 이미지를 선택해주세요</string>
+    <string name="moment_create_title_helper">모먼트 제목 (필수)</string>
+    <string name="moment_create_title_hint">20자 이내의 제목을 지어주세요.</string>
+    <string name="moment_crate_deadline_guide">마감일 선택 (필수)</string>
+    <string name="moment_crate_deadline_helper">모먼트가 종료되는 마감일을 선택해주세요.\n마감일 이후에는 작성할 수 없어요.</string>
+    <string name="moment_crate_deadline_three_days">3일 후</string>
+    <string name="moment_crate_deadline_seven_days">7일 후</string>
+    <string name="moment_crate_deadline_none">마감 없음</string>
+    <string name="moment_crate_category_guide">카테고리 선택</string>
+    <string name="moment_crate_category_hint">카테고리를 선택해주세요.</string>
+    <string name="moment_create_memo_guide">모먼트 소개</string>
+    <string name="moment_create_memo_hint">어떤 모먼트를 만들고 싶은가요? 소개글을 추가해주세요.</string>
+    <string name="moment_create_private_title">비공개로 만드시겠어요?</string>
+    <string name="moment_create_private_content">비공개는 초대받은 사람만 확인할 수 있습니다.\n모먼트 제작 후에는 공개 여부를 수정할 수 없습니다.</string>
+    <string name="moment_create_button">모먼트 만들기</string>
+    <string name="moment_create_cancel_title">모먼트 만들기를 그만두시겠어요?</string>
+    <string name="moment_create_cancel_content">이대로 나가면\n작성 중인 내용이 삭제 돼요!</string>
+    <string name="moment_create_cancel_positive">네, 그만 둘래요</string>
+    <string name="moment_create_cover_title">커버 이미지 선택</string>
+    <string name="moment_create_cover_camera">카메라로 촬영</string>
+    <string name="moment_create_cover_album">앨범에서 선택</string>
+    <string name="moment_create_cover_type1">기념의 순간</string>
+    <string name="moment_create_cover_type2">마음 전하기</string>
+    <string name="moment_create_cover_type3">작별의 순간</string>
+    <string name="moment_create_category_title">카테고리 선택</string>
+
+    <!-- 권한 안내 팝업 -->
+    <string name="permission_title_camera">카메라에 대한 접근 권한 필요</string>
+    <string name="permission_title_storage">앨범에 대한 접근 권한 필요</string>
+    <string name="permission_title_alarm">알림에 대한 접근 권한 필요</string>
+    <string name="permission_content_camera">카메라에 대한 권한 사용을 거부하였습니다.\n기능 사용을 위해 권한을 허용해주세요.</string>
+    <string name="permission_content_storage">앨범에 대한 권한 사용을 거부하였습니다.\n기능 사용을 위해 권한을 허용해주세요.</string>
+    <string name="permission_content_alarm">알림에 대한 권한 사용을 거부하였습니다.\n기능 사용을 위해 권한을 허용해주세요.</string>
+    <string name="permission_button">설정하러 가기</string>
 </resources>
