--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,13 @@
     <string name="trace_create_font_helper">폰트 선택</string>
     <string name="trace_create_font_hint">폰트를 선택해주세요</string>
     <string name="trace_create_background">배경 컬러</string>
+
+    <!-- 모먼트 상세 -->
+    <string name="moment_detail_enroll">$s에 참여하시겠어요?</string>
+    <string name="moment_detail_enroll_button">참여하기</string>
+    <string name="moment_detail_empty">아직 흔적이 없어요</string>
+    <string name="moment_detail_trace_count">%d개의 흔적이 남아있어요</string>
+    <string name="moment_detail_invite">초대하기</string>
+    <string name="moment_detail_trace_date_user">%s・%s</string>
+    <string name="moment_detail_plus_trace">흔적남기기</string>
 </resources>
