[feature] 내정보 조회 UI 구현 - @AndroidEntryPoint 누락된 클래스 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,11 @@
     <!-- 알림함 -->
     <string name="notification_title">알림</string>
     <string name="notification_info">30일 이내의 알림만 확인할 수 있어요.</string>
+
+    <!-- 내정보 -->
+    <string name="my_info_alarm">알림</string>
+    <string name="my_info_service">서비스 이용 약관</string>
+    <string name="my_info_policy">개인정보처리방침</string>
+    <string name="my_info_logout">로그아웃</string>
+    <string name="my_info_withdraw">회원탈퇴</string>
 </resources>
