[STYLE] - 앱 아이콘 적용

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RollingMoment</string>
+    <string name="app_name">Rollin\nMoment</string>
     <string name="app_push_name">롤링 모먼트 Push</string>
     <string name="app_push_channel_name">롤링 모먼트 알림</string>
 
