--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="moment_create_cover_category_3">마음 전하기</string>
     <string name="moment_create_cover_category_4">작별의 순간</string>
     <string name="moment_create_cover_category_5">기본 커버 이미지</string>
+    <string name="moment_edit_confirm">수정 완료</string>
 
     <!-- 권한 안내 팝업 -->
     <string name="permission_title_camera">카메라에 대한 접근 권한 필요</string>
