--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,4 +173,8 @@
     <string name="my_info_policy">개인정보처리방침</string>
     <string name="my_info_logout">로그아웃</string>
     <string name="my_info_withdraw">회원탈퇴</string>
+    <string name="my_info_logout_dialog_title">로그아웃 하시겠어요?</string>
+    <string name="my_info_withdraw_dialog_title">서비스를 탈퇴하시겠어요?</string>
+    <string name="my_info_logout_dialog_positive">네, 로그아웃 할래요</string>
+    <string name="my_info_withdraw_dialog_positive">네, 탈퇴할래요</string>
 </resources>
