--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="password_error">영문 대/소문자, 숫자, 특수문자를 조합한 8~16자의\n비밀번호를 입력해주세요. (연속하는 문자, 숫자 금지)</string>
     <string name="password_confirm_error">비밀번호를 다시 확인해주세요.</string>
     <string name="nickname_error">한글, 영어, 숫자를 포함하여 10자 이내로 작성해주세요.</string>
+    <string name="sign_up_done">회원가입에 성공했습니다!</string>
 
     <!-- 모먼트 만들기 -->
     <string name="moment_create_toolbar">모먼트 만들기</string>
@@ -81,6 +82,7 @@
     <string name="moment_create_cover_category_4">작별의 순간</string>
     <string name="moment_create_cover_category_5">기본 커버 이미지</string>
     <string name="moment_edit_confirm">수정 완료</string>
+    <string name="moment_edit_done">수정이 완료되었습니다</string>
 
     <!-- 권한 안내 팝업 -->
     <string name="permission_title_camera">카메라에 대한 접근 권한 필요</string>
@@ -105,6 +107,7 @@
     <string name="trace_create_font_helper">폰트 선택</string>
     <string name="trace_create_font_hint">폰트를 선택해주세요</string>
     <string name="trace_create_background">배경 컬러</string>
+    <string name="trace_create_done">당신의 흔적이 모먼트에 기록되었습니다</string>
 
     <!-- 모먼트 상세 -->
     <string name="moment_detail_enroll">%s에 참여하시겠어요?</string>
@@ -116,6 +119,7 @@
     <string name="moment_detail_plus_trace">흔적남기기</string>
     <string name="moment_detail_empty_title">흔적을 작성해보세요!</string>
     <string name="moment_detail_expired">공유하기</string>
+    <string name="moment_detail_delete_done">모먼트가 삭제되었습니다.</string>
 
     <!-- 모먼트 종료 -->
     <string name="moment_result_title">작성 기간이 마감되었어요!\n모먼트를 공유해보세요</string>
@@ -151,9 +155,10 @@
     <string name="moment_expired_soon">마감임박</string>
     <string name="moment_user_trace_count">흔적 %d</string>
     <string name="moment_public">공개된 모먼트</string>
-    <string name="moment_edit">모먼트 수정하기</string>
-    <string name="moment_save">모먼트 이미지로 저장하기</string>
-    <string name="moment_delete">모먼트 삭제하기</string>
+    <string name="moment_edit">수정하기</string>
+    <string name="moment_save">이미지로 저장하기</string>
+    <string name="moment_delete">삭제하기</string>
+    <string name="moment_report">신고하기</string>
     <string name="moment_deadline">D-%d</string>
     <string name="moment_deadline_expired">완료</string>
     <string name="moment_empty_title">진행중인 모먼트가 없어요</string>
@@ -181,4 +186,10 @@
     <string name="my_info_withdraw_dialog_title">서비스를 탈퇴하시겠어요?</string>
     <string name="my_info_logout_dialog_positive">네, 로그아웃 할래요</string>
     <string name="my_info_withdraw_dialog_positive">네, 탈퇴할래요</string>
+
+    <!-- 신고 -->
+    <string name="moment_report_title">신고하시겠습니까?</string>
+    <string name="moment_report_description">검토까지는 최대 24시간 소요됩니다.</string>
+    <string name="moment_report_positive">네, 신고할래요</string>
+    <string name="moment_report_done">신고가 접수되었습니다.</string>
 </resources>
