--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,12 @@
     <string name="no">아니요</string>
     <string name="clsoe">닫기</string>
 
+    <!-- 업데이트 팝업 -->
+    <string name="update_title">업데이트 안내</string>
+    <string name="update_comment">앱을 이용하기 위해 업데이트가 필요해요.\n최신 버전으로 업데이트를 진행해주세요.</string>
+    <string name="update_button">업데이트</string>
+    <string name="update_info">업데이트 항목</string>
+
     <string name="no_internet_exception">인터넷에 연결되지 않았습니다.</string>
 
     <string name="sign_in_title">기억하고 싶은 순간, 함께 채우는 모먼트</string>
