[feature] 흔적목록 내 내가 작성한 흔적에 대하여 [내흔적] 표시 기능 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,7 @@
     <string name="moment_detail_empty_title">흔적을 작성해보세요!</string>
     <string name="moment_detail_expired">공유하기</string>
     <string name="moment_detail_delete_done">모먼트가 삭제되었습니다.</string>
+    <string name="moment_detail_trace_mine">내흔적</string>
 
     <!-- 모먼트 종료 -->
     <string name="moment_result_title">작성 기간이 마감되었어요!\n모먼트를 공유해보세요</string>
