--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,4 +224,9 @@
     <string name="moment_search_empty_content">검색어를 다시 입력해주세요.</string>
     <string name="moment_search_count_title">%d개</string>
     <string name="moment_search_title">의 검색된 모먼트</string>
+
+    <!-- 내정보 수정 -->
+    <string name="moment_user_info_edit_title">내 정보 수정</string>
+    <string name="moment_user_withdraw">탈퇴하기</string>
+    <string name="moment_user_info_update_success">정보 수정이 완료되었습니다.</string>
 </resources>
